[tool.poetry]
name = "backtesting"
version = "0.1.0"
description = ""
authors = ["felipesilvaibi <felipe_ibirama@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tvdatafeed = {git = "https://github.com/StreamAlpha/tvdatafeed.git"}
python-dotenv = "^1.0.0"
plotly = "^5.14.0"
ipykernel = "^6.22.0"
nbformat = "^5.8.0"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
